k8s/01-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-cart
  labels:
    purpose: ms-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-cart
  template:
    metadata:
      name: ms-cart
      labels:
        app: ms-cart
    spec:
      containers:
      - name: ms-cart
        image: localhost:5000/ms-cart:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
