k8s/03-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /ms-cart
            pathType: Prefix
            backend:
              service:
                name: ms-cart
                port:
                  number: 80
